--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Laura Feregotti</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link href="css/styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
   </head>
   <body>
     <div id="app">
@@ -13,6 +12,6 @@
     <script src="/dist/build.js"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
   </body>
 </html>
